--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "matplotlib>=3.10.1",
+    "nltk>=3.9.1",
     "numpy>=2.2.5",
     "scikit-learn>=1.6.1",
+    "wordcloud>=1.9.4",
 ]
