--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "matplotlib>=3.10.1",
     "nltk>=3.9.1",
     "numpy>=2.2.5",
+    "pydantic>=2.11.4",
     "scikit-learn>=1.6.1",
+    "tokenizers>=0.21.1",
+    "torch>=2.7.0",
+    "tqdm>=4.67.1",
     "wordcloud>=1.9.4",
 ]
